# h2mm-gui

./: .gitignore  BUNDLING.md  README.md  Technical Blueprint for h2mm-gui.md  build.sh  com.jackgraddon.h2mmgui.json  debug_env.py  dev.sh  h2mm-gui.desktop  meson.build  package.json  run.sh  test_launcher.py
AppDir/: AppRun
build-aux/meson/: devenv.py.in  enhanced-devenv.py.in  postinstall.py
compiled-schemas/: gschemas.compiled
data/: com.jackgraddon.h2mmgui.desktop.in  com.jackgraddon.h2mmgui.gschema.xml  com.jackgraddon.h2mmgui.metainfo.xml.in  com.jackgraddon.h2mmgui.service.in  gschemas.compiled  meson.build
data/icons/: meson.build
po/: POTFILES.in  meson.build
src/: cliHandler.js  configManager.js  h2mm-gui.gresource.xml  h2mm-gui.in  main.js  main.py  meson.build  oobe.py  preferences.py  style.css  window.cmb  window.py  window.ui
src/gtk/: oobe.ui  preferences.ui
src/ui/: window.ui
